# Al-Marjaa-Web

./: .gitignore  Cargo.toml  README.md
.github/workflows/: trigger-core-build.yml
src/: error.rs  lib.rs  middleware.rs  request.rs  response.rs  router.rs  server.rs  session.rs  template.rs  utils.rs  websocket.rs
